--- a/index.html
+++ b/index.html
@@ -135,3 +135,57 @@
 	    </div>
     </section>
 <!--end of search form-->
+
+ <section class="ftco-section services-section bg-light">
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate">
+          	<h2 class="mb-4">It's time to start your adventure</h2>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+            A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p><a href="#" class="btn btn-primary py-3 px-4">Search Destination</a></p>
+          </div>
+          <div class="col-md-6">
+          	<div class="row">
+          		<div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		            <div class="media block-6 services d-block">
+		              <div class="icon"><span class="flaticon-paragliding"></span></div>
+		              <div class="media-body">
+		                <h3 class="heading mb-3">Activities</h3>
+		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		              </div>
+		            </div>      
+		          </div>
+		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		            <div class="media block-6 services d-block">
+		              <div class="icon"><span class="flaticon-route"></span></div>
+		              <div class="media-body">
+		                <h3 class="heading mb-3">Travel Arrangements</h3>
+		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		              </div>
+		            </div>    
+		          </div>
+		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		            <div class="media block-6 services d-block">
+		              <div class="icon"><span class="flaticon-tour-guide"></span></div>
+		              <div class="media-body">
+		                <h3 class="heading mb-3">Private Guide</h3>
+		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		              </div>
+		            </div>      
+		          </div>
+		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		            <div class="media block-6 services d-block">
+		              <div class="icon"><span class="flaticon-map"></span></div>
+		              <div class="media-body">
+		                <h3 class="heading mb-3">Location Manager</h3>
+		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		              </div>
+		            </div>      
+		          </div>
+          	</div>
+          </div>
+        </div>
+      </div>
+    </section>
