--- a/contact.html
+++ b/contact.html
@@ -232,7 +232,8 @@
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/scrollax.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOTSfXO72Wzf7FhIDXLewRoisMdNRPN9w&callback=initGoogleMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-nNMm3QeOUilp90E8kibDufs-SuoIgak&callback=initMap"
+  type="text/javascript"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
