--- a/contact.html
+++ b/contact.html
@@ -133,17 +133,8 @@
           	
 				<!-- Google Map -->
 
-				<div class="col-md-6 d-flex">
-					<div id="google_map">
-						<div class="map_container">
-							<div id="map"></div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
+          <div class="col-md-6 d-flex">
+          	<div id="map" class="bg-white"></div>
           </div>
         </div>
       </div>
@@ -234,6 +225,8 @@
   <script src="js/scrollax.min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-nNMm3QeOUilp90E8kibDufs-SuoIgak&callback=initMap"
   type="text/javascript"></script>
+  
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
