added styles ,js and changed hero

--- a/index.html
+++ b/index.html
@@ -47,9 +47,46 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
+    <!--hero-->
+<div class="slider3d first">
+  <div class="slider3d__wrapper">
+    <div class="slider3d__inner">
+      <div class="slider3d__rotater">
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="SO HEADING">SO HEADING</h2>
+        </div>
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="MUCH ROTATION">MUCH ROTATION</h2>
+        </div>
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="VERY 3D">VERY 3D</h2>
+        </div>
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="SUCH JAVASCRIPT">SUCH JAVASCRIPT</h2>
+        </div>
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="WOW WOW!">WOW WOW!</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="slider3d__controls">
+    <div class="slider3d__handle">
+      <div class="slider3d__handle__inner">
+        <div class="slider3d__handle__rotater">
+          <div class="slider3d__handle__item active">Page 1</div>
+          <div class="slider3d__handle__item">Page 2</div>
+          <div class="slider3d__handle__item">Page 3</div>
+          <div class="slider3d__handle__item">Page 4</div>
+          <div class="slider3d__handle__item">Page 5</div>
+        </div>
+      </div>
+    </div>
+    <div class="slider3d__control m--up"></div>
+    <div class="slider3d__control m--down"></div>
+  </div>
+</div>
 
-<div class="hero-wrap js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-9 text text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
