text to image slider

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
   <div class="slider3d__wrapper">
     <div class="slider3d__inner">
       <div class="slider3d__rotater">
-        <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="SO HEADING">SO HEADING</h2>
+        <div class="slider3d__item" >
+          <h2 class="slider3d__heading" data-text="SO HEADING">EXPLORE</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="MUCH ROTATION">MUCH ROTATION</h2>
+          <h2 class="slider3d__heading" data-text="MUCH ROTATION">THE WORLD</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="VERY 3D">VERY 3D</h2>
+          <h2 class="slider3d__heading" data-text="VERY 3D">WITHOUT</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="SUCH JAVASCRIPT">SUCH JAVASCRIPT</h2>
+          <h2 class="slider3d__heading" data-text="SUCH JAVASCRIPT">Limits !</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="WOW WOW!">WOW WOW!</h2>
+          <h2 class="slider3d__heading" data-text="WOW WOW!">Join US !</h2>
         </div>
       </div>
     </div>
