added text to about

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 </div>
 
 <!--end of heroimages-->
-
+<!--about-->
  <section class="ftco-section services-section bg-light">
       <div class="container">
         <div class="row d-flex">
           <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate">
           	<h2 class="mb-4">It's time to start your adventure</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-            A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p>We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
+            <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
+            <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
             <p><a href="#" class="btn btn-primary py-3 px-4">Search Destination</a></p>
           </div>
           <div class="col-md-6">
@@ -106,7 +106,8 @@
 		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Activities</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		                <p>The best part of your vacation
+Join the millions of travelers who make the most of their vacations through Destination tours & activities</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -115,7 +116,7 @@
 		              <div class="icon"><span class="flaticon-route"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Travel Arrangements</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		                <p>We find and compare prices for flights, hotels and rental cars in real time, so you can get cheap, fast and good deals on your travels</p>
 		              </div>
 		            </div>    
 		          </div>
@@ -124,7 +125,7 @@
 		              <div class="icon"><span class="flaticon-tour-guide"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -132,8 +133,8 @@
 		            <div class="media block-6 services d-block">
 		              <div class="icon"><span class="flaticon-map"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Location Manager</h3>
-		                <p>A small river named Duden flows by their place and supplies it with the necessary</p>
+		                <h3 class="heading mb-3">Explore</h3>
+		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
 		              </div>
 		            </div>      
 		          </div>
