added images to hero and changed text

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
   <div class="slider3d__wrapper">
     <div class="slider3d__inner">
       <div class="slider3d__rotater">
-        <div class="slider3d__item" >
+        <div class="slider3d__item">
           <h2 class="slider3d__heading" data-text="SO HEADING">EXPLORE</h2>
         </div>
-        <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="MUCH ROTATION">THE WORLD</h2>
+        <div class="slider3d__item" style="background-image:url(images/slide1.jpg);">
+          <h2 class="slider3d__heading" data-text="MUCH ROTATION">The WORLD</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="VERY 3D">WITHOUT</h2>
+          <h2 class="slider3d__heading" data-text="VERY 3D">Without</h2>
         </div>
         <div class="slider3d__item">
           <h2 class="slider3d__heading" data-text="SUCH JAVASCRIPT">Limits !</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="WOW WOW!">Join US !</h2>
+          <h2 class="slider3d__heading" data-text="WOW WOW!">Join Us !</h2>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@ Join the millions of travelers who make the most of their vacations through Dest
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex">
-    				<div class="img d-flex align-self-stretch" style="background-image:url(images/about.jpg);"></div>
+    				<div class="img d-flex align-self-stretch" style="background-image:url(images/safe.jpg);"></div>
     			</div>
     			<div class="col-md-6 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
