added text for about

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@ Join the millions of travelers who make the most of their vacations through Dest
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		            <h2 class="mb-4">Make Your Tour Memorable and Safe With Us</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+		            <p> We create unforgettable memories by ensuring that everywhere you go has local character, tasteful settings, and provides a unique story.</p>
 		          </div>
 		        </div>
 		    		<div class="row">
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center mb-4">
 		              <div class="text">
-		                <strong class="number" data-number="300">0</strong>
+		                <strong class="number" data-number="400">0</strong>
 		                <span>Successful Tours</span>
 		              </div>
 		            </div>
