changed text and map

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Destination</title>
+    <title>Destinations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -29,7 +29,7 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Destination<span>Travel Agency</span></a>
+	      <a class="navbar-brand" href="index.html">Destinations<span>Travel Agency</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -53,16 +53,16 @@
     <div class="slider3d__inner">
       <div class="slider3d__rotater">
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="SO HEADING">EXPLORE</h2>
+          <h2 class="slider3d__heading" data-text="explore">EXPLORE</h2>
         </div>
         <div class="slider3d__item" style="background-image:url(images/slide1.jpg);">
-          <h2 class="slider3d__heading" data-text="MUCH ROTATION">The WORLD</h2>
+          <h2 class="slider3d__heading" data-text="the World">THE WORLD</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="VERY 3D">Without</h2>
+          <h2 class="slider3d__heading" data-text="without">WITHOUT</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="SUCH JAVASCRIPT">Limits !</h2>
+          <h2 class="slider3d__heading" data-text="limits">Limits !</h2>
         </div>
         <div class="slider3d__item">
           <h2 class="slider3d__heading" data-text="WOW WOW!">Join Us !</h2>
@@ -442,7 +442,7 @@ Join the millions of travelers who make the most of their vacations through Dest
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Destination</h2>
+              <h2 class="ftco-heading-2">Destinations</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -520,7 +520,8 @@ Join the millions of travelers who make the most of their vacations through Dest
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-nNMm3QeOUilp90E8kibDufs-SuoIgak&callback=initMap"
+  type="text/javascript"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
