--- a/contact.html
+++ b/contact.html
@@ -138,11 +138,11 @@
 		<!-- Google Map -->
 
           <div class="col-md-6 d-flex">
-          	<div id="map" class="bg-white">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d130265.72825399956!2d17.84196979930569!3d59.326241967230644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f763119640bcb%3A0xa80d27d3679d7766!2sStockholm!5e0!3m2!1sen!2sse!4v1586813659961!5m2!1sen!2sse" width="575" height="480" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-              </div>
+          	<div id="map" class="bg-white"></div>
+            <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d130265.72825399956!2d17.84196979930569!3d59.326241967230644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f763119640bcb%3A0xa80d27d3679d7766!2sStockholm!5e0!3m2!1sen!2sse!4v1586813659961!5m2!1sen!2sse" width="575" height="480" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
-        </div>
+          </div>
       </div>
     </section>
 
@@ -151,7 +151,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Destination</h2>
+              <h2 class="ftco-heading-2">Destinations</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
