added section and divs about adventure

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 </div>
 
 <!--end of heroimages-->
+
 <!--about-->
  <section class="ftco-section services-section bg-light">
       <div class="container">
@@ -143,6 +144,7 @@ Join the millions of travelers who make the most of their vacations through Dest
         </div>
       </div>
     </section>
+
     <!--about-->
  <section class="ftco-counter img" id="section-counter">
     	<div class="container">
@@ -188,6 +190,67 @@ Join the millions of travelers who make the most of their vacations through Dest
     	</div>
     </section>
     <!--end of about-->
+
+    <!--adventure-->
+    <section class="feature-area section_gap_top">
+		<div class="container">
+        <div class="row align-items-end justify-content-left">
+				<div class="col-lg-12">
+				</div>
+			</div>
+			<div class="row">
+				<!-- single-feature -->
+				<div class="col-lg-4 col-md-6">
+					<div class="single-feature">
+						<div class="feature-details">
+							<h5>Desert Riding Turning <br>
+								So much Flowery</h5>
+							<p>
+								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+							</p>
+							<a href="#" class="primary-btn mb-40">Read More</a>
+						</div>
+						<div class="feature-thumb">
+							<img class="img-fluid" src="images/s1.png" alt="">
+						</div>
+					</div>
+				</div>
+				<!-- single-feature -->
+				<div class="col-lg-4 col-md-6">
+					<div class="single-feature">
+						<div class="feature-details">
+							<h5>Relaxation in the <br>
+								Local Beach Campfire</h5>
+							<p>
+								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+							</p>
+							<a href="#" class="primary-btn mb-40">Read More</a>
+						</div>
+						<div class="feature-thumb">
+							<img class="img-fluid" src="images/s2.png" alt="">
+						</div>
+					</div>
+				</div>
+				<!-- single-feature -->
+				<div class="col-lg-4 col-md-6">
+					<div class="single-feature">
+						<div class="feature-details">
+							<h5>Forest Exploration <br>
+								with Energy Package</h5>
+							<p>
+								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+							</p>
+							<a href="#" class="primary-btn mb-40">Read More</a>
+						</div>
+						<div class="feature-thumb">
+							<img class="img-fluid" src="images/s3.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    
     <!--vacation-->
     <section class="ftco-section">
     	<div class="container">
