added testimony and description to adventure

--- a/index.html
+++ b/index.html
@@ -203,15 +203,15 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<div class="feature-details">
-							<h5>Desert Riding Turning <br>
-								So much Flowery</h5>
+							<h5>Desert Riding  <br>
+								adventures</h5>
 							<p>
-								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+								Join a group of adventure-seekers for 11 days as they travel over 350 miles across the world's largest sand desert on camel-back.
 							</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
-							<img class="img-fluid" src="images/s1.png" alt="">
+							<img class="img-fluid" src="images/desert.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -222,12 +222,12 @@ Join the millions of travelers who make the most of their vacations through Dest
 							<h5>Relaxation in the <br>
 								Local Beach Campfire</h5>
 							<p>
-								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+								There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.
 							</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
-							<img class="img-fluid" src="images/s2.png" alt="">
+							<img class="img-fluid" src="images/fire.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -236,14 +236,14 @@ Join the millions of travelers who make the most of their vacations through Dest
 					<div class="single-feature">
 						<div class="feature-details">
 							<h5>Forest Exploration <br>
-								with Energy Package</h5>
+								Rainforest</h5>
 							<p>
-								Lorem ipsum dolor sit amet, consecter adipisicing elit, sed do eiusmod tempor incididunt.
+								Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.
 							</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
-							<img class="img-fluid" src="images/s3.png" alt="">
+							<img class="img-fluid" src="images/forest.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -414,89 +414,46 @@ Join the millions of travelers who make the most of their vacations through Dest
     </section>
     <!---testimony-->
     <section class="ftco-section testimony-section bg-bottom" style="background-image: url(images/bg_3.jpg);">
-      <div class="container">
-        <div class="row justify-content-center pb-4">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Tourist Feedback</h2>
-          </div>
+      
+        <div class="testimonial-section">
+      <div class="inner-width">
+        <h1>What Our Clients Say</h1>
+        <div class="testimonial-pics">
+          <img src="images/p2.jpg" alt="test-1" class="active">
+          <img src="images/p1.jpg" alt="test-2">
+          <img src="images/p4.jpg" alt="test-3">
+          <img src="images/p3.jpg" alt="test-4">
         </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name"> Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Lucy</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Jenny</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Jason</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+
+        <div class="testimonial-contents">
+          <div class="testimonial active" id="test-1">
+            <p>We had an amazing trip thanks to you and just loved everywhere you suggested in Italy. It was a trip of a lifetime. We had 3 days of incredible hiking, Lake Garda was just as beautiful as Lake Como, but a different feel and of course Venice is always fascinating! Loved every hotel and most especially, thank you for your direction, planning and hand-holding for our epic Italian adventure. We cannot wait for our next trip!</p>
+            <span class="description">Eva / USA</span>
+          </div>
+
+          <div class="testimonial" id="test-2">
+            <p>Just wanted to say many, many thanks for helping me set up an amazing Costa Rican adventure! My nephew and I had a blast! All of the accommodations were perfect as were the activities that we did (canopy, coffee tour, hikes, fishing, and massages!)
+
+We have such fond memories and can't thank you enough!
+
+you rock! Can't wait to figure out my next adventure!</p>
+            <span class="description">Kelly / France</span>
+          </div>
+
+          <div class="testimonial" id="test-3">
+            <p>We would like to thank you for your outstanding service!!  The recent African trip you customized for the Carlstedt's and Tolliver's was amazing!! We can't think of one thing we would have changed on this trip.  We loved the variety of lodgings we stay in and all logistics went according to plan.
+
+We did not have to worry about a thing.  It was a perfect trip that we will always remember as one of our very best!</p>
+            <span class="description">Thomas / Japan</span>
+          </div>
+
+          <div class="testimonial" id="test-4">
+            <p>Thanks to you, we had a wonderful experience in Peru.  We knew only a small amount of Spanish, so it was a great relief of stress to have local contacts and guides that we could count on throughout our travels to guide us in the right direction, see the sights we wanted to see and make the absolute most of our trip.  The country was beautiful, the people gracious, a memory of a lifetime.  Thanks to you and your connections, we have no regrets about our trip and look forward to working with you on our next adventure!</p>
+            <span class="description">Monica / Inida</span>
           </div>
         </div>
       </div>
+    </div>
     </section>
     <!--end of testimony-->
     <!--footer-->
