added text to images

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="gallery-details">
 					<div class="gallary-header text-center">
 						<h2>
-							top destination
+							top destinations
 						</h2>
 						<p>
-							Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.  
+						You can't miss these top attractions .   
 						</p>
 					</div><!--/.gallery-header-->
 					<div class="gallery-box">
