--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/india.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													china
+													India
 												</a>
 												<p><span>20 tours</span><span>15 places</span></p>
 											</div><!-- /.item-title -->
@@ -285,10 +285,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/japan.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													venuzuala
+													Japan
 												</a>
 												<p><span>12 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
@@ -297,10 +297,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/egypt.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													brazil
+													Egypt
 												</a>
 												<p><span>25 tours</span><span>10 places</span></p>
 											</div><!-- /.item-title -->
@@ -309,10 +309,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/brazil.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													australia 
+													Brazil 
 												</a>
 												<p><span>18 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
@@ -321,10 +321,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/desert.jpg" alt="portfolio image"/>
+											<img src="images/australia.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													netharland
+													Australia
 												</a>
 												<p><span>14 tours</span><span>12 places</span></p>
 											</div> <!-- /.item-title-->
