--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@ Join the millions of travelers who make the most of their vacations through Dest
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/brazil.jpg" alt="portfolio image"/>
+											<img src="images/maldives.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Brazil 
+													Maldives
 												</a>
-												<p><span>18 tours</span><span>9 places</span></p>
+												<p><span>10 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
 										</div><!-- /.filtr-item -->
 						  			</div><!-- /.col -->
@@ -369,10 +369,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/maldives.jpg" alt="portfolio image"/>
+											<img src="images/greece.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
-													Maldives
+													Greece
 												</a>
 												<p><span>8 tours</span><span>9 places</span></p>
 											</div> <!-- /.item-title-->
